# gists

./: .gitignore  LICENSE  README.md
cheatsheets/: react-redux
clojure/: roll-dice.clj
csharp/: DTO.cs  FindExtensions.cs
customer-events/: index.js  index.spec.js
docker/: docker-compose.yml
js/: optimize-picks.js
k8s/: home-assistant.yml  node-red.yml  octoprint-server.yml
objective-c/: .gitignore
obsidian/: journal.md  mini-essay.md
ruby/: atlas.rb
rust/: keploy_json_manifest.rs
rust/recipe-book-backend/: .env.development  .env.example  .gitignore  Cargo.toml  Makefile  Procfile  docker-compose.yml
rust/recipe-book-backend/scripts/: build-image.sh  debug-image.sh  install.sh  migrate.sh
rust/recipe-book-backend/src/: main.rs
rust/sample-rust-app/: .env.development  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
rust/sample-rust-app/.github/workflows/: ci.yml
rust/sample-rust-app/scripts/: build-image.sh  debug-image.sh  migrate.sh  push-image.sh
rust/sample-rust-app/src/: main.rs
rust/sample-rust-app/src/api/: service.rs
rust/sample-rust-app/src/config/: app_config.rs  database_config.rs  environment_config.rs  mod.rs  test_helpers.rs
rust/sample-rust-app/src/extensions/: json.rs
rust/sample-rust-app/src/health_check/: domain.rs  mod.rs  repository.rs  use_cases.rs
rust/sample-rust-app/src/oauth/: domain.rs  mod.rs  use_cases.rs
scripts/: install-dbmate.sh  install-ios-dependencies.sh  install-istio.sh  install-pack.sh  install-prometheus.sh  install-tap.sh  run-postgres.sh  ship-it.sh
(+510 files in other folders)
