[package]
name = "recipe-book-backend"
version = "0.1.0"
authors = [
    "TJ Maynes <tj@tjmaynes.com>"
]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.7", features = [ "runtime-actix-native-tls", "postgres" ] }