[package]
name = "oauth-service"
version = "0.1.0"
authors = [
    "TJ Maynes <tj@tjmaynes.com>"
]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
async-trait = "0.1.51"
dotenv = "0.15.0"
env_logger = "0.9.0"
envy = "0.4"
lazy_static = "1.4.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.7", features = [ "runtime-actix-native-tls", "postgres", "offline" ] }
tokio-test = "0.4.2"